src/test/ui/mismatched_types/issue-75361-mismatched-impl.stderr
error: `impl` item signature doesn't match `trait` item signature
  --> $DIR/issue-75361-mismatched-impl.rs:18:3
   |
LL |   fn adjacent_edges(&self) -> Box<dyn MyTrait<Item = &Self::EdgeType>>;
   |   --------------------------------------------------------------------- expected `fn(&T) -> Box<(dyn MyTrait<Item = &_> + 'static)>`
...
LL |   fn adjacent_edges(&self) -> Box<dyn MyTrait<Item = &Self::EdgeType> + '_> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found `fn(&T) -> Box<dyn MyTrait<Item = &_>>`
   |
   = note: expected `fn(&T) -> Box<(dyn MyTrait<Item = &T> + 'static)>`
              found `fn(&T) -> Box<dyn MyTrait<Item = &T>>`
help: the lifetime requirements from the `impl` do not correspond to the requirements in the `trait`
  --> $DIR/issue-75361-mismatched-impl.rs:12:55
   |
LL |   fn adjacent_edges(&self) -> Box<dyn MyTrait<Item = &Self::EdgeType>>;
   |                                                       ^^^^^^^^^^^^^^ consider borrowing this type parameter in the trait

error: aborting due to previous error

